# edge-ai-perf-master

./: .gitignore  CMakeLists.txt  LEARNING_GUIDE.md  README.md
cmake/: CompilerOptions.cmake  FindNCNN.cmake  VulkanSetup.cmake
include/common/: Logger.h  MathUtils.h  Tensor.h
include/ncnn_ext/: CustomHardSwish.h  NcnnCustomLayerRegistry.h  NcnnModelRunner.h
include/operators/: Conv2dAvx2.h  Conv2dNaive.h  Conv2dTiled.h  Conv2dWinograd.h  GemmBlocked.h  IOperator.h  VulkanComputeBase.h  VulkanConv2d.h  VulkanGemm.h
include/profiler/: MemoryTracker.h  OpProfiler.h  PowerMonitor.h
include/scheduler/: DeviceInfo.h  DispatchStrategy.h  HeuristicDispatch.h  HybridExecutor.h  OpGraph.h  ProfileGuidedDispatch.h
labs/: CMakeLists.txt
labs/lab1_profiling/: step1_timer_basics.cpp  step2_memory_tracking.cpp  step3_op_profiling.cpp  step4_power_monitoring.cpp
labs/lab2_scheduling/: step1_device_query.cpp  step2_op_graph_build.cpp  step3_heuristic_dispatch.cpp  step4_profile_guided_dispatch.cpp  step5_hybrid_execution.cpp
labs/lab3_operators/: step1_naive_conv.cpp  step2_simd_conv.cpp  step3_cache_tiled_conv.cpp  step4_winograd_conv.cpp  step5_gemm_blocked.cpp  step6_vulkan_compute_basics.cpp  step7_vulkan_gemm.cpp  step8_vulkan_conv2d.cpp  step9_custom_ncnn_op.cpp
models/: download_models.py
python/: CMakeLists.txt  requirements.txt
python/bindings/: _edgeai.cpp
python/edgeai/: __init__.py  dashboard.py  power_analyzer.py  visualize.py
python/scripts/: compare_ops.py  plot_profiling.py
scripts/: build.bat  build.sh
src/: CMakeLists.txt
src/common/: Logger.cpp  MathUtils.cpp  Tensor.cpp
src/ncnn_ext/: CustomHardSwish.cpp  NcnnCustomLayerRegistry.cpp  NcnnModelRunner.cpp
src/operators/: Conv2dAvx2.cpp  Conv2dNaive.cpp  Conv2dTiled.cpp  Conv2dWinograd.cpp  GemmBlocked.cpp  VulkanComputeBase.cpp  VulkanConv2d.cpp  VulkanGemm.cpp
src/profiler/: MemoryTracker.cpp  OpProfiler.cpp  PowerMonitor.cpp
src/scheduler/: DeviceInfo.cpp  DispatchStrategy.cpp  HeuristicDispatch.cpp  HybridExecutor.cpp  OpGraph.cpp  ProfileGuidedDispatch.cpp
src/shaders/: conv2d.comp.glsl  gemm.comp.glsl
tests/: CMakeLists.txt
